--- a/fmi-native-export/build.gradle
+++ b/fmi-native-export/build.gradle
@@ -17,6 +17,7 @@ if (!project.getProperties().get("skipBuildNative", false)) {
         targetMachines.set([
                 machines.windows.x86_64,
                 machines.linux.x86_64,
+                machines.macOS.x86_64
         ])
 
         lib.binaries.whenElementFinalized { CppBinary binary ->
@@ -36,6 +37,9 @@ if (!project.getProperties().get("skipBuildNative", false)) {
                 } else if (os.isWindows()) {
                     add(binary.includePathConfiguration.name, files("$javaHome/include/win32"))
                     add(binary.linkLibraries.name, files(os.getLinkLibraryName("$javaHome/lib/jvm")))
+                } else if(os.isMacOsX()) {
+                    add(binary.includePathConfiguration.name, files("$javaHome/include/darwin"))
+                    add(binary.linkLibraries.name, files(os.getLinkLibraryName("$javaHome/lib/server/jvm")))
                 } else {
                     throw new IllegalStateException("Unsupported OS: " + os.name)
                 }
@@ -73,7 +77,12 @@ if (!project.getProperties().get("skipBuildNative", false)) {
                         from "$buildDir/lib/main/release/windows/"
                         include "*.dll"
                     }
-                } else {
+                } else if (os.isMacOsX()) {
+                    into("darwin64") {
+                        from "$buildDir/lib/main/releases/darwin/"
+                        include "*.dylib"
+                    }
+
                     throw new Exception("Unsupported OS: " + os.name)
                 }
 
