--- a/fmi-native-export/build.gradle
+++ b/fmi-native-export/build.gradle
@@ -82,7 +82,7 @@ if (!project.getProperties().get("skipBuildNative", false)) {
                         from "$buildDir/lib/main/releases/darwin/"
                         include "*.dylib"
                     }
-
+                } else {
                     throw new Exception("Unsupported OS: " + os.name)
                 }
 
