--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,7 +28,7 @@ jobs:
           java-version: ${{matrix.jvm-version}}
 
       - name: Build
-        run: ./gradlew clean build
+        run: ./gradlew clean build --stacktrace
         shell: bash
 
 #      - uses: actions/upload-artifact@master
